* Update bower.json.ls too

--- a/bower.json
+++ b/bower.json
@@ -28,11 +28,11 @@
         "jquery": "*"
       }
     },
-    "jquery": {
-      "main": "jquery.min.js"
-    },
     "angular-mocks": {
       "main": "README.md"
+    },
+    "jquery": {
+      "main": "jquery.js"
     },
     "bootstrap-stylus": {
       "main": [
